loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:5: error: type blue is not a member of object java.awt.Color
setCouleurCorps(c:Color.blue);
                        ^LoopStairs:5: error: not found: value c
setCouleurCorps(c:Color.blue);
                ^LoopStairs:8: error: type cyan is not a member of object java.awt.Color
setCouleurCorps(c:Color.cyan);
                        ^LoopStairs:8: error: not found: value c
setCouleurCorps(c:Color.cyan);
                ^LoopStairs:11: error: type green is not a member of object java.awt.Color
setCouleurCorps(c:Color.green);
                        ^LoopStairs:11: error: not found: value c
setCouleurCorps(c:Color.green);
                ^LoopStairs:14: error: type yellow is not a member of object java.awt.Color
setCouleurCorps(c:Color.yellow);
                        ^LoopStairs:14: error: not found: value c
setCouleurCorps(c:Color.yellow);
                ^LoopStairs:17: error: type orange is not a member of object java.awt.Color
setCouleurCorps(c:Color.orange);
                        ^LoopStairs:17: error: not found: value c
setCouleurCorps(c:Color.orange);
                ^LoopStairs:20: error: type red is not a member of object java.awt.Color
setCouleurCorps(c:Color.red);
                        ^LoopStairs:20: error: not found: value c
setCouleurCorps(c:Color.red);
                ^LoopStairs:23: error: type magenta is not a member of object java.awt.Color
setCouleurCorps(c:Color.magenta);
                        ^LoopStairs:23: error: not found: value c
setCouleurCorps(c:Color.magenta);
                ^