loopfor.LoopStairs.scala.code
avance(3);
droite;
avance();
droite();
setCouleurCorps(c:Color.blue);
avance();
droite();
setCouleurCorps(c:Color.cyan);
avance();
droite();
setCouleurCorps(c:Color.green);
avance();
droite();
setCouleurCorps(c:Color.yellow);
avance();
droite();
setCouleurCorps(c:Color.orange);
avance();
droite();
setCouleurCorps(c:Color.red);
avance();
droite();
setCouleurCorps(c:Color.magenta);
avance(3);